@@ -9,8 +9,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>241</width>
-            <height>97</height>
+            <width>334</width>
+            <height>190</height>
         </rect>
     </property>
     <property name="caption">
@@ -20,6 +20,70 @@
         <property name="name">
             <cstring>unnamed</cstring>
         </property>
+        <widget class="QGroupBox">
+            <property name="name">
+                <cstring>groupBox3_2</cstring>
+            </property>
+            <property name="title">
+                <string>Global</string>
+            </property>
+            <vbox>
+                <property name="name">
+                    <cstring>unnamed</cstring>
+                </property>
+                <widget class="QCheckBox">
+                    <property name="name">
+                        <cstring>kcfg_UseIntervalFetch</cstring>
+                    </property>
+                    <property name="text">
+                        <string>Use interval fetching</string>
+                    </property>
+                </widget>
+                <widget class="QLayoutWidget">
+                    <property name="name">
+                        <cstring>layout4</cstring>
+                    </property>
+                    <hbox>
+                        <property name="name">
+                            <cstring>unnamed</cstring>
+                        </property>
+                        <widget class="QLabel">
+                            <property name="name">
+                                <cstring>textLabel1</cstring>
+                            </property>
+                            <property name="text">
+                                <string>Fetch all feeds every</string>
+                            </property>
+                        </widget>
+                        <widget class="QSpinBox">
+                            <property name="name">
+                                <cstring>kcfg_AutoFetchInterval</cstring>
+                            </property>
+                            <property name="enabled">
+                                <bool>false</bool>
+                            </property>
+                            <property name="maxValue">
+                                <number>3600</number>
+                            </property>
+                            <property name="minValue">
+                                <number>1</number>
+                            </property>
+                            <property name="lineStep">
+                                <number>10</number>
+                            </property>
+                        </widget>
+                        <widget class="QLabel">
+                            <property name="name">
+                                <cstring>textLabel2</cstring>
+                            </property>
+                            <property name="text">
+                                <string>minute(s)</string>
+                            </property>
+                        </widget>
+                    </hbox>
+                </widget>
+            </vbox>
+        </widget>
         <widget class="QGroupBox">
             <property name="name">
                 <cstring>groupBox3</cstring>
@@ -51,5 +115,13 @@
         </widget>
     </vbox>
 </widget>
+<connections>
+    <connection>
+        <sender>kcfg_UseIntervalFetch</sender>
+        <signal>toggled(bool)</signal>
+        <receiver>kcfg_AutoFetchInterval</receiver>
+        <slot>setEnabled(bool)</slot>
+    </connection>
+</connections>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
